litmask/tests/compile/mask_format_too_many_args.stderr
error: positional argument 1 is never used (give it a placeholder or remove it from the mask_format! call)
 --> tests/compile/mask_format_too_many_args.rs:9:26
  |
9 |     let _ = mask_format!("{}", "used", "unused");
  |                          ^^^^
